--- a/Backend/Day-06/package.json
+++ b/Backend/Day-06/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "npx nodemon server.js"
+    "dev": "npx nodemon server.js"
   },
   "keywords": [
     "db",
@@ -15,6 +15,7 @@
   "author": "Aman Kumar",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.1.5"
   }
